# lmarena-clone

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  .mcp.json.example  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  ollama-init.sh  pyproject.toml
WORKSPACE/: 00_PROJECT.md  00_ROADMAP.md
WORKSPACE/ARCHITECTURE/: ADR_001-No_Foreign_Keys.md  DATABASE_DESIGN.md  README.md
WORKSPACE/CONVENTIONS/: CODE_REVIEW.md  COMMIT_GUIDELINES.md  GIT_FLOW.md  PR_GUIDELINES.md  README.md
WORKSPACE/CONVENTIONS/backend/: ALEMBIC.md  CODE_STYLE.md  FASTAPI.md  README.md  SQLMODEL.md  TESTING.md  UV.md
WORKSPACE/CONVENTIONS/frontend/: NEXTJS.md  README.md  SHADCN.md  TESTING.md
WORKSPACE/FEATURES/: 001_BATTLE_MVP.md  002_LEADERBOARD_MVP.md  003_THEME_TOGGLE.md  004_SESSION_MANAGEMENT.md  README.md  SESSION_WIDE_MULTI_ASSISTANT_PROGRESS.md
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  185323a1d7b8_use_timezone_aware_timestamps.py  92005f75b0c0_refactor_rename_index_in_session_to_seq_.py  b1c5dfd43f55_add_sessions_battles_votes_tables.py  d7e4e8fa91aa_change_session_user_id_from_int_to_.py
backend/config/: README.md  models.dev.yaml  models.prod.yaml
backend/src/llmbattler_backend/: __init__.py  database.py  main.py
backend/src/llmbattler_backend/api/: __init__.py  battles.py  leaderboard.py  models.py  sessions.py
backend/src/llmbattler_backend/mongodb/: __init__.py
backend/src/llmbattler_backend/repositories/: __init__.py  base.py  battle_repository.py  model_stats_repository.py  session_repository.py  vote_repository.py
backend/src/llmbattler_backend/services/: __init__.py  leaderboard_service.py  llm_client.py  model_service.py  session_service.py
backend/tests/: conftest.py  test_battles_api.py  test_leaderboard_api.py  test_main.py  test_models_api.py  test_sessions_api.py
config/: models.yaml
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: sidebar.tsx  theme-toggle.tsx
frontend/lib/: apiClient.ts  storage.ts
shared/: pyproject.toml
worker/: .env.example  Dockerfile  pyproject.toml
worker/tests/: conftest.py  test_database.py  test_elo_aggregator.py  test_elo_calculator.py  test_logging.py  test_main.py
(+28 files in other folders)
